[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/PlayUI.gd" type="Script" id=1]
[ext_resource path="res://images/ScoreBackground.png" type="Texture" id=2]
[ext_resource path="res://fonts/ConcertOne-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 128, 64 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[node name="PlayUI" type="Control"]
margin_right = 1024.0
margin_bottom = 80.0
script = ExtResource( 1 )

[node name="TexturePanel" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="TexturePanel"]
margin_right = 1024.0
margin_bottom = 92.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="GridContainer" type="GridContainer" parent="TexturePanel/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 1008.0
margin_bottom = 76.0
custom_constants/vseparation = 8
columns = 2

[node name="TimeTextLabel" type="Label" parent="TexturePanel/MarginContainer/GridContainer"]
margin_right = 96.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 2 )
text = "Time: "

[node name="TimeValueLabel" type="Label" parent="TexturePanel/MarginContainer/GridContainer"]
margin_left = 100.0
margin_right = 133.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 2 )
text = "90"

[node name="ScoreTextLabel" type="Label" parent="TexturePanel/MarginContainer/GridContainer"]
margin_top = 34.0
margin_right = 96.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )
text = "Score: "

[node name="ScoreValueLabel" type="Label" parent="TexturePanel/MarginContainer/GridContainer"]
margin_left = 100.0
margin_top = 34.0
margin_right = 133.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )
text = "0"
